manifests/workloads/kube-prom-stack/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  selector:
    app.kubernetes.io/instance: kps
    app.kubernetes.io/name: grafana
  sessionAffinity: None
